# video_trace_pipeline

./: .gitignore  PIPELINE_CHANGE_RECOMMENDATIONS.md  PIPELINE_FINAL_RECOMMENDATIONS.md  PIPELINE_MENTAL_MAP.md  PIPELINE_PLAN_VALIDATOR_FALLBACK.md  PLANNER_ACTION_LOOP_REDESIGN.md  README.md  VERIFIER_STATE_AND_OCR_RECOMMENDATIONS.md  VIDEO_13_RUN_DETAILED_FLOW.md  pyproject.toml  requirements-local-tools.txt  requirements-vllm.txt  requirements-whisperx.txt  requirements.txt  run_video_trace_pipeline.sh
configs/: machine.example-2gpu.yaml  machine.example.yaml  machine.nexus.yaml  machine.scavenger-2gpu.yaml  models.tool_servers.example.yaml  models.yaml
inputs/: refiner_inputs.json  refiner_inputs_10pct_part1.json  refiner_inputs_10pct_part2.json  refiner_inputs_10pct_part3.json  refiner_inputs_minerva.json  refiner_inputs_minerva_random50.json  refiner_inputs_omnivideobench.json  review_failure_eval_selected.json
scripts/: run_video_trace_pipeline_srun.sh
slurm/: run_video_trace_pipeline.slurm  run_video_trace_pipeline_simple.slurm
tests/: test_bbox_normalization.py  test_cli_direct_input.py  test_cli_inputs_json.py  test_common.py  test_debug_runs.py  test_dense_caption_preprocess.py  test_diagnostics.py  test_executor_cache.py  test_exports.py  test_frame_retriever_runner.py  test_generic_purpose_guardrails.py  test_local_asr.py  test_local_multimodal.py  test_media.py  test_model_cache.py  test_model_configs.py  test_observation_extractor.py  test_ocr_batching.py  test_olmocr_runner.py  test_openai_client.py  test_paddleocr_runner.py  test_persistent_pool.py  (+21 more)
(+3258 files in other folders)
